@@ -1,1 +1,1 @@
-Release 1.1.0
+Release 1.1.1
