@@ -1,0 +1,6 @@
+#include <strstream>
+using std::strstream;
+using std::istrstream;
+using std::ostrstream;
+using std::strstreambuf;
+
